2001-10-30  Corinna Vinschen  <corinna@vinschen.de>

	* (fhandler_socket::dup): Revert previous change.

2001-10-30  Christopher Faylor  <cgf@redhat.com>

	* dtable.cc (dtable::dup2): Add some debugging.  Use methods from
	passed in class rather than cygheap->fdtab.
	* fhandler_socket.cc (fhandler_socket::fixup_before_fork_exec): Add
	more debugging output.
	(fhandler_socket::dup): Allocate new space for prot_info_ptr for
	duplicated entry.
	* syscalls.cc (stat_worker): Always delete fh if it has been created.

2001-10-29  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (is_group_member): Call NetLocalGroupGetMembers() for
	local machine only.
	(get_user_local_groups): Ditto for NetLocalGroupEnum().

2001-10-29  Christopher Faylor  <cgf@redhat.com>

	* fhandler.cc (fhandler_base::set_name): Set namehash here to catch
	name changes.
	(fhandler_base::open): Remove namehash setting.
	(fhandler_base::fstat): Subtract 1 from arbitrary time setting to avoid
	strange ls -l granularity problem.

2001-10-24  Christopher Faylor  <cgf@redhat.com>

        * shared_info.h (MOUNT_VE

2001-10-29  Christopher Faylor  <cgf@redhat.com>

	* select.cc (MAKEready): Remove extraneous select_read.

2001-10-29  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (internal_getlogin): Set environment variable $HOME
	from either /etc/passwd or $HOMEDRIVE/$HOMEPATH if necessary.

2001-10-29  Christopher Faylor  <cgf@redhat.com>

	* fhandler.h (fhandler_serial::fhandler_serial): Change to only accept
	unit argument.
	* fhandler_serial.cc (fhandler_serial::fhandler_serial): Ditto.
	(fhandler_serial::open): Avoid else when previous clause is a return().
	* path.cc (get_devn): Alias /dev/ttyS0 -> /dev/com1, etc.
	(get_device_number): Reallow standalone "com1" as a valid name for
	/dev/com1.

2001-10-26  Christopher Faylor  <cgf@redhat.com>

	* select.cc (MAKEready): Check for read_ready in loop since select_read
	could set it.